Use apache commons for B64 decoding continuation token (only), and added ability to make the limit on the entropy data call configurable, for internal testing.  Defaults to 100, as before.